<resources>
    <string name="app_name">CheckList</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="welcome">Welcome</string>
    <string name="todo">Todo</string>
    <string name="submit">Submit</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="maps">Maps</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="user_info">User Info</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="dob">DOB</string>
    <string name="i_agree_to_terms_and_conditions">I Agree to Terms and Conditions</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_notes">Add Notes</string>
    <string name="title">Title</string>
    <string name="type_your_message_here">Type Your Message Here</string>
    <string name="save_profile">Save Profile</string>
</resources>