<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes.NotesEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EditTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edittext_box"
                android:fontFamily="sans-serif-light"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10sp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/EditMessage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edittext_box"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:hint="@string/type_your_message_here"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10sp"
                android:selectAllOnFocus="true"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="75sp">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="save"
                    android:layout_marginRight="50sp"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="delete"
                    android:text="@string/delete"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/nav_menu" />

</RelativeLayout>