<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PasswordReset.PasswordResetActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:onClick="login"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/back_to_home_button"
                    app:tint="@color/colorPrimary"
                    android:focusable="true" />

            </LinearLayout>

                <ImageView
                    android:id="@+id/ForgotPassword"
                    android:layout_width="150sp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_marginTop="15sp"
                    android:src="@drawable/forgotpassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,SmallSp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your Email to reset your password"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,SmallSp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginRight="15sp"
                    android:background="@drawable/edittext_box"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/rounded_button"
                android:onClick="reset"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>